@@ -1,6 +1,8 @@
 Version 1.7.0+svn:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bugfixes:
+   * Add strict compilation to cmake
 
 Version 1.7.0:
  * AI:
